# zerobugs

./: ChangeLog.txt  Makefile  Makefile.in  README  TODO  arch.sh  build  confdefs.h  configure  zero.desktop
bench/: test.h
demangle_d/: Makefile  README  config.h  copyright.c  demangle.c  demangle.h  main.c  parser.c  parser.h  string.c  string.h  util.c  util.h  version
dharma/: Makefile  README  bstream.cpp  bstream.h  canonical_path.h  canonical_path_unix.cpp  config.h  cstream.cpp  cstream.h  directory.cpp  directory.h  dynamic_lib.cpp  dynamic_lib.h  dynamic_lib_unix.cpp  environ.cpp  environ.h  exec.cpp  exec.h  exec_arg.cpp  exec_arg.h  flock.cpp  flock.h  fstream.cpp  fstream.h  hash_map.h  object_factory.h  object_manager.cpp  object_manager.h  path.h  pipe.cpp  pipe.h  plugin_manager.cpp  plugin_manager.h  plugin_traits.h  process_name.h  process_name_bsd.cpp  process_name_linux.cpp  process_name_unix.cpp  properties.cpp  properties.h  (+31 more)
dwarfz/: Makefile  README  abi_x86.cpp  access_attr.cpp  aggregation.cpp  array_type.cpp  attr.cpp  base_type.cpp  block.cpp  class_type.cpp  comp_dir_attr.cpp  compile_unit.cpp  const_type.cpp  const_value.cpp  datum.cpp  debug.cpp  decorated_type.cpp  delegate.cpp  die.cpp  encoding_attr.cpp  enum_type.cpp  error.cpp  factory.cpp  function.cpp  globals.cpp  imported_decl.cpp  inheritance.cpp  init.cpp  inlined_instance.cpp  location.cpp  location_attr.cpp  log.cpp  main.cpp  member.cpp  namespace.cpp  pointer_type.cpp  producer.cpp  ptr_to_member_type.cpp  subrange_type.cpp  subroutine_type.cpp  (+11 more)
elfz/: Makefile  README  binary.cpp  core_file.cpp  dyn_lib_list.cpp  error.cpp  file.cpp  headers.cpp  ldsoconf.cpp  note.cpp  program_header.cpp  section.cpp  selector.cpp  symbol_table.cpp  test.conf
engine/: Doxyfile  Makefile  Makefile.in  breakpoint.cpp  breakpoint.h  breakpoint_enabler.h  breakpoint_grp.cpp  breakpoint_img.cpp  breakpoint_img.h  breakpoint_mgr.cpp  breakpoint_mgr.h  core_thread.cpp  core_thread.h  cprologue.h  cprologue32.cpp  cprologue64.cpp  dbgout.h  debug_regs_base.h  debugger_base.cpp  debugger_base.h  debugger_engine.cpp  debugger_engine.h  debugger_shell.cpp  debugger_shell.h  deferred_breakpoint.cpp  disassemble.cpp  expr_events_wrapper.h  expr_observer.h  history.cpp  history.h  init.cpp  internal_cmd.cpp  internal_cmd.h  main.cpp  module.cpp  module.h  proc_service.cpp  process.cpp  process.h  ptrace.h  (+32 more)
help/: about.html  arrays.html  attaching.html  breakpoints.html  breakpoints2.html  bugs.hlp  bugs.html  cmdline.html  control.html  empty.html  environ.html  exceptions.html  functions.html  hardware_breakpoints_bug.html  index.html  intro.html  known_issues.hlp  layout.html  locals.html  macros.html  memory.html  note.html  overview.html  pycallbacks.html  pycon.html  pyexample-3.html  pyexample-6.html  pyexample.html  pyhelp.html  pyobjects.hlp  pyref.html  python.hlp  python.html  quickview.html  registers.html  remote.html  signals.html  stackview.html  stepping.html  stl_visualization_bug.html  (+5 more)
interp/: Makefile  README.txt  abstract_decl.cpp  abstract_decl.h  additive_expr.cpp  additive_expr.h  alt_events.h  assign.cpp  assign.h  binary_expr.cpp  binary_expr.h  bit_expr.cpp  bit_expr.h  call_setup.cpp  call_setup.h  cast_expr.cpp  cast_expr.h  collect_symbol.cpp  collect_symbol.h  conditional_expr.cpp  conditional_expr.h  constant.cpp  constant.h  context.cpp  context.h  context_impl.cpp  context_impl.h  cpu_state_saver.cpp  cpu_state_saver.h  debug_out.h  errors.h  eval_inc_dec.cpp  eval_inc_dec.h  eval_sym.cpp  eval_sym.h  expr.cpp  expr.h  frame_setup.cpp  frame_setup.h  grammar.cpp  (+45 more)
make/: copy-gtk-1.2-libs  install.sh  runtime-libs  sysid
plugin/: .zero.py  init.py  update.py  zero-gtkrc-2.0
plugin/gui/: Makefile.in  README  accel.h  all_visible_strategy.cpp  all_visible_strategy.h  app_slots.cpp  app_slots.h  assert_thread.h  auto_condition.h  bool_filter_param.cpp  bool_filter_param.h  case_insensitive.h  check_listitem.cpp  check_listitem.h  check_listitem_1.cpp  check_listitem_2.cpp  code_view.cpp  code_view.h  code_view_1.cpp  code_view_2.cpp  code_view_common.h  code_view_signals.h  command.h  config.h  config.h.in  configure  configure.ac  cursor.h  custom_tooltip.cpp  custom_tooltip.h  debugger_environ.h  dialog_box.cpp  dialog_box.h  edit_breakpoint_dlg.cpp  edit_breakpoint_dlg.h  edit_in_place.cpp  edit_in_place.h  edit_watchpoint_dlg.cpp  edit_watchpoint_dlg.h  ensure_font.cpp  (+150 more)
plugin/gui/gtkmm/: README  accelgroup.h  accelkey.h  accelmap.h  add_accel.h  adjustment.h  base.h  box.h  button.h  buttonbox.h  checkbutton.h  clist.cpp  clist.h  color.h  column_adapter.h  combo.h  connect.h  container.h  ctree.cpp  ctree.h  dialog.h  entry.h  eventbox.h  events.h  fileselection.h  flags.h  font.h  fontselection.h  frame.h  handlebox.h  icon_mapper.h  image.h  label.h  list.cpp  list.h  listitem.cpp  listitem.h  main.h  marker.cpp  marker.h  (+36 more)
plugin/gui/icons/: arrow.xpm  close.xpm  info.xpm  info2.xpm  question.bak.xpm  question.xpm  right.xpm  stop.xpm  stop_mini.xpm  stop_pink.xpm  stop_red.xpm  warning.xpm  zeroicon.xpm
plugin/gui/icons/tool/: back2.xpm  forward.xpm  forward2.xpm  next.xpm  ret.xpm  return.xpm  run.xpm  run2.xpm  step.xpm  step_in.xpm  step_out.xpm  step_over.xpm  stepi.xpm  stepover.xpm  stop2.xpm  stop3.xpm
python/: README  dmi.py  dtestunit.py  gendoc.py  install.py  macro.py  stl.py  stlhelp.py  unit.py  zui
readline/: Makefile  README  read_line.cpp  read_line.h  read_line_test.cpp  terminal.cpp  terminal.h  test.cpp
rpc/: Makefile  attr.h  attr_def.h  attr_enums.h  attr_names.h  dispatcher.cpp  dispatcher.h  msg.cpp  msg.h  msgcli.cpp  msgsrv.cpp  remote_ifstream.cpp  remote_ifstream.h  remote_io.cpp  remote_io.h  rpc.h
server/: Makefile  README  factory.cpp  factory.h  forked_server.h  main.cpp  server.h  server_socket.cpp  (+3 more)
zdk/make/: Common.mak  Common.mak.in  Epilogue.mak  Gtkmm.mak  Python.mak  Python.mak.in  ax_boost_base.m4  ax_boost_python.m4  ax_python.m4  configure  configure.ac  gcc_ver.c  glibpath.mak  mklibdep  shell.m4
(+844 files in other folders)
